<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cfgh"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_cfgh" />
        <item
            android:id="@+id/nav_cfxt"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_cfxt" />

        <item
            android:id="@+id/nav_wdcf"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_wdcf"
            />
        <item
            android:id="@+id/nav_dtq"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_dtq" />
        <item
            android:id="@+id/nav_cp"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_cp" />
        <item
            android:id="@+id/nav_wdkh"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_wdkh"
            />

        <item
            android:id="@+id/nav_tjfx"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tjfx"
            />
    </group>


</menu>
